somewhat working shear rotate, except it's off-center at 90 degrees. Naively correcting by 0.5 does not work.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.formatOnType": true,
-    "files.autoSave": "afterDelay",
+    "files.autoSave": "off",
     "files.watcherExclude": {
         "**/.git/objects/**": true,
         "**/built/**": true,
